# nixos

./: configuration.nix  flake.nix  hardware-configuration.nix  home.nix  keybindings.nix  keyboard.nix
.serena/: project.yml
home/: concord.nix  fastfetch.nix  fish.nix  fonts.nix  git.nix  hackatime.nix  htop.nix  mangohud.nix  nvim.nix  qutebrowser.nix  rio.nix  tmux.nix  tmuxp.nix  tofi.nix
home/concord/: config.toml  keymap.toml
home/nvim/: flake.nix  init.lua
home/nvim/lua/: community.lua  lazy_setup.lua  polish.lua
home/nvim/lua/plugins/: astrocore.lua  astrolsp.lua  blink.lua  harpoon.lua  mason.lua  theme.lua  treesitter.lua  ts-autotag.lua  wakatime.lua
home/nvim/lua/user/: toggles.lua
home/tmuxp/: config.yaml  dev_env.yaml
hosts/desktop/: configuration.nix
hosts/server/: configuration.nix  hardware-configuration.nix
modules/: river.nix  scripts.nix
patches/: gharial-output-focus-warp.patch
river/gharial-init/: Cargo.toml
river/gharial-init/src/: desktop.rs  main.rs
river/meander-bar/: Cargo.toml
river/meander-bar/src/: main.rs
scripts/: attach-session.nix  create-session.nix  load-project.nix  load-session.nix  night-light.nix  record-stop.nix  record.nix  switch-reboot.nix
