[package]
name = "meander-bar"
version = "1.0.0"
edition = "2021"
publish = false

[[bin]]
name = "meander-bar"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
meander = { path = "MEANDER_ROOT_PLACEHOLDER/crates/meander" }
meander-gharial = { path = "MEANDER_ROOT_PLACEHOLDER/crates/meander-gharial" }
